# Curso-FastAPI

./: .gitignore  README.md  anotacoes.txt  encontrar_ip.py  enviar_mensagem_whatsapp.py  ruff.txt  testando_api.py
fast_zero/: .coverage  .env  pyproject.toml
fast_zero/fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/fast_zero/routers/: auth.py  todo.py  users.py
fast_zero/migrations/: env.py
fast_zero/migrations/versions/: 48a16442e211_create_users_table.py  48b6c21285f8_create_todos_table.py  4ebf1ccfb5ec_create_todos_table.py
fast_zero/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
