[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["João <eujoaovictor0707@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"
tzdata = "^2024.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"
factory-boy = "^3.3.1"
freezegun = "^1.5.1"

 
[tool.pytest.ini_options] #para os testes da aplicação
pythonpath = "." 
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','F', 'E', 'W', 'PL', 'PT']

#definindo variaveis para atalho utilizando o comando task seguido do atalho
[tool.taskipy.tasks]
run = 'fastapi dev fast_zero/app.py' #comando para rodar o servidor do fastapi
pre_test = 'task lint'
test = 'pytest --cov=fast_zero -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix  && ruff format .'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
